# techne

./: .gitignore  DEPLOYMENT_READY.md  IMPL.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  zensical.toml
.claude/: skill-context.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github-template/workflows/: docs.yml
.github/workflows/: dependabot-auto-merge.yml  docs.yml  validate.yml
docs/: architecture.md  configuration.md  conventions.md  examples.md  getting-started.md  index.md
docs/javascripts/: hero.js
docs/plans/: 2026-05-17-theoros.md
docs/skills/: audit.md  auto-commit.md  ci-audit.md  deslop.md  docs-site.md  docsync.md  index.md  paper-review.md  paper.md  research-grounded.md  reslop.md  sisters.md  theoros.md
docs/stylesheets/: base.css  extra.css  variables.css
docs/stylesheets/components/: hero.css  landing.css
docs/superpowers/specs/: 2026-05-19-techne-refresh-design.md  2026-06-14-techne-paper-review-skill-design.md  2026-06-14-techne-paper-skill-design.md
plugins/techne/.claude-plugin/: plugin.json
plugins/techne/_shared/: hate-words.md
plugins/techne/skills/audit/: SKILL.md
plugins/techne/skills/auto-commit/: SKILL.md
plugins/techne/skills/ci-audit/: SKILL.md
scripts/: check_action_pins.sh  check_theoros_skill.sh  dev-runner.sh  validate_skill_frontmatter.py
superpowers/plans/: 2026-05-19-techne-refresh.md  2026-05-21-skill-ideas-from-audit-of-audit.md
superpowers/specs/: 2026-05-17-theoros-design.md
templates/: Makefile.example  dependabot.yml.example
(+15 files in other folders)
