[project]
name = "techne"
version = "0.1.0"
description = "An opinionated Claude Code skill collection for repo hygiene, audits, and doc/code drift."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "zensical>=0.0.50",
    "shellcheck-py>=0.11",
    "zizmor>=1.26.1",
]

[tool.uv]
package = false

# ruff config — narrow scope today (just scripts/) since the only tracked
# Python in this repo is the SKILL.md frontmatter validator. The sister
# floor is `ruff>=0.9`, `target-version = "py312"`. Extend `select` as more
# Python lands.
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
